update profiling tutorial

--- a/short_tutorials/profiling_accelerating_python_code.ipynb
+++ b/short_tutorials/profiling_accelerating_python_code.ipynb
@@ -9,16 +9,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n",
+      "*** Profile stats marshalled to file '/var/folders/y0/mjkc7jhs1799z200jjg82lww0000gp/T/tmp4r8x0896'.\n",
+      "Embedding SnakeViz in this document...\n",
+      "<function display at 0x106c811c0>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<iframe id='snakeviz-433fa40c-3f92-11ef-9ad5-9a7d234f7319' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
+       "<script>document.getElementById(\"snakeviz-433fa40c-3f92-11ef-9ad5-9a7d234f7319\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Fvar%2Ffolders%2Fy0%2Fmjkc7jhs1799z200jjg82lww0000gp%2FT%2Ftmp4r8x0896\")</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# from the terminal, profile Python code with cProfile\n",
-    "python -m cProfile -o report.prof  myCode.py\n",
+    "import numpy as np\n",
     "\n",
-    "# then visualize with SnakeViz to identify bottlenecks\n",
-    "snakeviz report.prof\n",
-    "# ...giving a report like this:"
+    "%load_ext snakeviz\n",
+    "\n",
+    "# `%snakeviz%` will profile a line or block of code \n",
+    "# by running cProfile then snakeviz and producing an \n",
+    "# interactive call stack to help you identify benchmarks\n",
+    "# (see https://jiffyclub.github.io/snakeviz/ for a more thorough explanation)\n",
+    "%snakeviz np.fft.fft(np.random.rand(10000))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can profile a Python script from the terminal by first calling cProfile\n",
+    "\n",
+    "`python -m cProfile -o report.prof  myCode.py`\n",
+    "\n",
+    "and then visualizing the result with SnakeViz\n",
+    "\n",
+    "`snakeviz report.prof`\n",
+    "\n",
+    "to easily get a report on a large set of code, like the below."
    ]
   },
   {
@@ -37,23 +80,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No Numba:  14.692933958023787\n",
-      "With Numba:  3.0573482918553054\n"
+      "No Numba:  16.303466625045985\n",
+      "With Numba:  2.9970250001642853\n"
      ]
     }
    ],
    "source": [
     "# speed up your object-oriented Python code by adding a just-in-time compiled function with Numba\n",
-    "\n",
-    "import timeit\n",
     "import numpy as np\n",
+    "import timeit\n",
     "from numba import jit\n",
     "\n",
     "class MyClass:\n",
@@ -64,7 +106,8 @@
     "    @jit(nopython=True)\n",
     "\n",
     "    def heavy_duty(A, B):\n",
-    "        \"\"\"Write your critical functions as 'pure' functions, i.e. perform operations on / return only numpy arrays\"\"\"\n",
+    "        \"\"\"Write your critical functions as 'pure' functions, \n",
+    "        i.e. perform operations on / return only numpy arrays\"\"\"\n",
     "        return np.exp(A * B)\n",
     "\n",
     "\n",
