typos in profiling tutorial

--- a/short_tutorials/profiling_accelerating_python_code.ipynb
+++ b/short_tutorials/profiling_accelerating_python_code.ipynb
@@ -42,9 +42,9 @@
     "\n",
     "%load_ext snakeviz\n",
     "\n",
-    "# `%snakeviz%` will profile a line or block of code \n",
-    "# by running cProfile then snakeviz and producing an \n",
-    "# interactive call stack to help you identify benchmarks\n",
+    "# `%snakeviz%` will first profile a line or block of code \n",
+    "# by running cProfile, then run snakeviz to produce an \n",
+    "# interactive call stack that helps you identify bottlenecks\n",
     "# (see https://jiffyclub.github.io/snakeviz/ for a more thorough explanation)\n",
     "%snakeviz np.fft.fft(np.random.rand(10000))"
    ]
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can profile a Python script from the terminal by first calling cProfile\n",
+    "You can also profile a Python script from the terminal, by first calling cProfile\n",
     "\n",
     "`python -m cProfile -o report.prof  myCode.py`\n",
     "\n",
@@ -61,7 +61,7 @@
     "\n",
     "`snakeviz report.prof`\n",
     "\n",
-    "to easily get a report on a large set of code, like the below."
+    "to easily get a report on a larger suite of code, like the below."
    ]
   },
   {
