--- a/short_tutorials/errors_exceptions_in_python.ipynb
+++ b/short_tutorials/errors_exceptions_in_python.ipynb
@@ -6,7 +6,7 @@
         "id": "wKwhgBKayjNP"
       },
       "source": [
-        "Access this notebook at "
+        "Access this notebook at https://tinyurl.com/python-errors."
       ]
     },
     {
