--- a/short_tutorials/errors_exceptions_in_python.ipynb
+++ b/short_tutorials/errors_exceptions_in_python.ipynb
@@ -76,7 +76,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "(Note that the carat `^` is showing us where in the line the syntax error was encountered.)"
+        "(Note that the caret `^` is showing us where in the line the syntax error was encountered.)"
       ]
     },
     {
