--- a/docs/tutorials/profiling_accelerating_python_code.ipynb
+++ b/docs/tutorials/profiling_accelerating_python_code.ipynb
@@ -4,42 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Profiling Python code with cProfile"
+    "# Profiling and accelerating Python code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Profiling Python code with cProfile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " \n",
-      "*** Profile stats marshalled to file '/var/folders/y0/mjkc7jhs1799z200jjg82lww0000gp/T/tmp4r8x0896'.\n",
-      "Embedding SnakeViz in this document...\n",
-      "<function display at 0x106c811c0>\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<iframe id='snakeviz-433fa40c-3f92-11ef-9ad5-9a7d234f7319' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
-       "<script>document.getElementById(\"snakeviz-433fa40c-3f92-11ef-9ad5-9a7d234f7319\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Fvar%2Ffolders%2Fy0%2Fmjkc7jhs1799z200jjg82lww0000gp%2FT%2Ftmp4r8x0896\")</script>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
-    "\n",
     "%load_ext snakeviz\n",
     "\n",
     "# `%snakeviz%` will first profile a line or block of code \n",
@@ -68,14 +49,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](_images/profile_result.png)"
+    "![title](../_static/profile_result.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Accelerating Python code with Numba"
+    "## Accelerating Python code with Numba"
    ]
   },
   {
@@ -126,7 +107,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -140,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
