support for building julia tutorial

--- a/docs/tutorials/Julia_tutorial.ipynb
+++ b/docs/tutorials/Julia_tutorial.ipynb
@@ -2,13 +2,21 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "c3428a94",
+      "metadata": {},
       "source": [
-        "Author: Adam Wheeler (CCA, awheeler@simonsfoundation.org)"
-      ],
+        "# Julia crash course"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "GCDUzmhAFnoC",
       "metadata": {
         "id": "GCDUzmhAFnoC"
       },
-      "id": "GCDUzmhAFnoC"
+      "source": [
+        "Author: Adam Wheeler (CCA, awheeler@simonsfoundation.org)"
+      ]
     },
     {
       "cell_type": "code",
@@ -35,7 +43,7 @@
         "id": "e050f00d-d110-4be9-9f60-3d01dc72fc36"
       },
       "source": [
-        "### just-in-time compilation and performance"
+        "## just-in-time compilation and performance"
       ]
     },
     {
@@ -123,7 +131,7 @@
         "id": "8f4c2534-0928-46c4-81f4-0e44386935ea"
       },
       "source": [
-        "### multiple dispatch"
+        "## multiple dispatch"
       ]
     },
     {
@@ -186,7 +194,7 @@
         "id": "c256ce57-4a85-4cfb-8b33-36f61f55c487"
       },
       "source": [
-        "### Custom type + multiple dispatch"
+        "## Custom type + multiple dispatch"
       ]
     },
     {
@@ -325,7 +333,7 @@
         "id": "2ecf9887-ab50-4e9c-92f5-e618673572db"
       },
       "source": [
-        "### basic linear algebra and broadcasting (\"vectorization\")"
+        "## basic linear algebra and broadcasting (\"vectorization\")"
       ]
     },
     {
@@ -601,7 +609,7 @@
         "id": "4240bb56-92ca-4629-98e3-86baa39a5f68"
       },
       "source": [
-        "### PythonPlot"
+        "## PythonPlot"
       ]
     },
     {
@@ -648,28 +656,23 @@
         "xlabel(\"x\")\n",
         "ylabel(\"sin(x)\")"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "eNRVYZ_p24SL"
-      },
-      "id": "eNRVYZ_p24SL",
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
-    "kernelspec": {
-      "display_name": "Julia",
-      "name": "julia"
-    },
-    "language_info": {
-      "name": "julia"
-    },
     "colab": {
       "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Julia 1.11.0",
+      "language": "julia",
+      "name": "julia-1.11"
+    },
+    "language_info": {
+      "codemirror_mode": "julia",
+      "file_extension": ".jl",
+      "mimetype": "application/julia",
+      "name": "julia",
+      "version": "1.11.0"
     }
   },
   "nbformat": 4,
