--- a/docs/tutorials/errors_exceptions_in_python.ipynb
+++ b/docs/tutorials/errors_exceptions_in_python.ipynb
@@ -13,6 +13,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "Author: Jeff Jennings (CCA, jjennings@simonsfoundation.org)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "'Syntax errors' are mistakes in the grammar of Python that are checked for before code is executed.\n",
         "\n",
         "'Exceptions' are 'runtime errors' - conditions usually caused by attempting an invalid operation. \n",
