--- a/docs/tutorials/functions_classes_in_python.ipynb
+++ b/docs/tutorials/functions_classes_in_python.ipynb
@@ -13,6 +13,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "Author: Jeff Jennings (CCA, jjennings@simonsfoundation.org)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Functions"
       ]
     },
