--- a/docs/tutorials/profiling_accelerating_python_code.ipynb
+++ b/docs/tutorials/profiling_accelerating_python_code.ipynb
@@ -15,6 +15,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Author: Philip Mocz (CCA, pmocz@simonsfoundation.org)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
