add jax tutorials

--- a/docs/tutorials/JAX/0-the_new_python.ipynb
+++ b/docs/tutorials/JAX/0-the_new_python.ipynb
@@ -12,6 +12,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f7f6b809",
+   "metadata": {},
+   "source": [
+    "Author: Nathaniel Starkman (MIT, starkman@mit.edu)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7cde5a4b",
    "metadata": {
     "id": "7cde5a4b"
@@ -809,7 +817,7 @@
     "id": "040ec482"
    },
    "source": [
-    "# Recap"
+    "## Recap"
    ]
   },
   {
