--- a/docs/tutorials/JAX/1-jax_and_autodiff.ipynb
+++ b/docs/tutorials/JAX/1-jax_and_autodiff.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d7afce8b",
+   "metadata": {},
+   "source": [
+    "Author: Nathaniel Starkman (MIT, starkman@mit.edu)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3829e238",
    "metadata": {},
    "source": [
@@ -838,7 +846,7 @@
    "id": "bd68894c",
    "metadata": {},
    "source": [
-    "# JaxTyping + BearType"
+    "## JaxTyping + BearType"
    ]
   },
   {
@@ -982,7 +990,7 @@
    "id": "f6bac276",
    "metadata": {},
    "source": [
-    "# Recap"
+    "## Recap"
    ]
   },
   {
