--- a/docs/tutorials/JAX/2-quax.ipynb
+++ b/docs/tutorials/JAX/2-quax.ipynb
@@ -5,8 +5,22 @@
    "id": "340f212c-855e-40f4-a0b1-43b3e0375340",
    "metadata": {},
    "source": [
-    "# Workshop on Quax 🦆\n",
-    "\n",
+    "# Workshop on Quax 🦆"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec4bc889",
+   "metadata": {},
+   "source": [
+    "Author: Nathaniel Starkman (MIT, starkman@mit.edu)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf0247ea",
+   "metadata": {},
+   "source": [
     "This example is adapted from https://docs.kidger.site/quax/\n",
     "\n",
     "In this example, we'll see how to create a custom array-ish Quax type.\n",
@@ -411,7 +425,7 @@
    "id": "8e662591",
    "metadata": {},
    "source": [
-    "# Quaxed "
+    "## Quaxed "
    ]
   },
   {
@@ -636,7 +650,7 @@
    "id": "1ed1dde1",
    "metadata": {},
    "source": [
-    "# Recap"
+    "## Recap"
    ]
   },
   {
