add package install to julia tutorial

--- a/docs/tutorials/Julia_tutorial.ipynb
+++ b/docs/tutorials/Julia_tutorial.ipynb
@@ -629,8 +629,8 @@
       "source": [
         "# I don't recommend doing this on Google colab\n",
         "\n",
-        "#using Pkg\n",
-        "#Pkg.add(\"PythonPlot\")\n",
+        "using Pkg\n",
+        "Pkg.add(\"PythonPlot\")\n",
         "using PythonPlot"
       ]
     },
