overhaul file structure

--- a/docs/tutorials/julia/Julia_tutorial.ipynb
+++ b/docs/tutorials/julia/Julia_tutorial.ipynb
@@ -15,7 +15,7 @@
         "id": "GCDUzmhAFnoC"
       },
       "source": [
-        "Author: Adam Wheeler (CCA, awheeler@simonsfoundation.org)"
+        "Author: Adam Wheeler (CCA, 2025)"
       ]
     },
     {
