--- a/docs/tutorials/python/accelerating/profiling_accelerating_python_code.ipynb
+++ b/docs/tutorials/python/accelerating/profiling_accelerating_python_code.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Profiling and accelerating Python code"
+    "# Profiling and accelerating Python"
    ]
   },
   {
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Author: Philip Mocz (CCA, pmocz@simonsfoundation.org)"
+    "Author: Philip Mocz (CCA, 2025)"
    ]
   },
   {
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../_static/profile_result.png)"
+    "![title](../../_static/profile_result.png)"
    ]
   },
   {
