--- a/docs/tutorials/python/basics/functions_classes_in_python.ipynb
+++ b/docs/tutorials/python/basics/functions_classes_in_python.ipynb
@@ -13,7 +13,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Author: Jeff Jennings (CCA, jjennings@simonsfoundation.org)"
+        "Author: Jeff Jennings (CCA, 2025)"
       ]
     },
     {
@@ -505,7 +505,7 @@
       ],
       "source": [
         "# get the sky image used for the tutorial\n",
-        "as209_img = np.load('../_static/AS209_dirty_image.npy')"
+        "as209_img = np.load('../../_static/AS209_dirty_image.npy')"
       ]
     },
     {
