--- a/docs/tutorials/python/jax/JAX_set/0-the_new_python.ipynb
+++ b/docs/tutorials/python/jax/JAX_set/0-the_new_python.ipynb
@@ -15,7 +15,7 @@
    "id": "f7f6b809",
    "metadata": {},
    "source": [
-    "Author: Nathaniel Starkman (MIT, starkman@mit.edu)"
+    "Author: Nathaniel Starkman (MIT, 2025)"
    ]
   },
   {
