--- a/docs/tutorials/python/jax/JAX_set/2-quax.ipynb
+++ b/docs/tutorials/python/jax/JAX_set/2-quax.ipynb
@@ -13,7 +13,7 @@
    "id": "ec4bc889",
    "metadata": {},
    "source": [
-    "Author: Nathaniel Starkman (MIT, starkman@mit.edu)"
+    "Author: Nathaniel Starkman (MIT, 2025)"
    ]
   },
   {
