--- a/docs/tutorials/python/basics/errors_exceptions_in_python.ipynb
+++ b/docs/tutorials/python/basics/errors_exceptions_in_python.ipynb
@@ -13,7 +13,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Author: Jeff Jennings (CCA, jjennings@simonsfoundation.org)"
+        "Author: Jeff Jennings (CCA, 2025)"
       ]
     },
     {
