--- a/docs/tutorials/python/jax/JAX_set/1-jax_and_autodiff.ipynb
+++ b/docs/tutorials/python/jax/JAX_set/1-jax_and_autodiff.ipynb
@@ -13,7 +13,7 @@
    "id": "d7afce8b",
    "metadata": {},
    "source": [
-    "Author: Nathaniel Starkman (MIT, starkman@mit.edu)"
+    "Author: Nathaniel Starkman (MIT, 2025)"
    ]
   },
   {
