--- a/docs/tutorials/python/jax/JAX_set/3-unxt.ipynb
+++ b/docs/tutorials/python/jax/JAX_set/3-unxt.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ab10a8ea",
+   "metadata": {},
+   "source": [
+    "Author: Nathaniel Starkman (MIT, 2025)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3d9c07cc",
    "metadata": {},
    "source": [
